fix: jumping scrollbar issue

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -26,8 +26,10 @@ body {
   background-color: var(--color-background);
   scroll-behavior: smooth;
   accent-color: var(--color-accent);
-  margin: 0 auto;
-  margin-left: calc(calc(100vw - 100%) / 2);
+}
+
+html {
+  margin-left: calc(100vw - 100%);
 }
 
 body {
@@ -61,6 +63,7 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
+  margin: 0 auto;
 }
 
 input[type='text'],
